--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,13 @@
 .App {
   font-family: sans-serif;
   text-align: center;
+  background-color: grey;
+  color: white;
+  padding: 10%;
+}
+
+.App > div {
+  background-color: tomato;
+  padding: 5%;
+  margin: 20px 0px;
 }
